i18n and remove layout animation

--- a/packages/app/i18n/jp.json
+++ b/packages/app/i18n/jp.json
@@ -1,72 +1,102 @@
 {
-  "welcome": "こんにちは][チャーリー][ホーム][新作！",
-  "name": "長続きするコミックのおすすめを読む！][カテゴリ][詳細はこちら！][トップコミック][ジャンル][コミックを検索][詳細][ホット][トップ週][履歴][もっと見る][ライブラリ][最近][購読][ダウンロード][発見][ジャンルを選択][ユーザー向け][最大チャプター数][ステータス][並べ替え][設定][アカウント",
+  "welcome": "ハロー",
+  "name": "チャーリー",
   "home": {
-    "name": "ログイン][より多くの機能を使用するためにログイン",
+    "name": "ホーム",
     "recently": {
-      "title": "Due2385AE_3",
-      "subtitle": "Due2385AE_4"
+      "title": "新規リリース!",
+      "subtitle": "続きのコミック推奨をお読みください"
     },
     "categories": {
-      "title": "Due2385AE_5",
-      "subtitle": "Due2385AE_6",
-      "items": [
-        "Due2385AE_7",
-        "Due2385AE_8",
-        "Due2385AE_9",
-        "長続きするコミックのおすすめを読む！][カテゴリ][詳細はこちら！][トップコミック][ジャンル][コミックを検索][詳細][ホット][トップ週][履歴][もっと見る][ライブラリ][最近][購読][ダウンロード][発見][ジャンルを選択][ユーザー向け][最大チャプター数][ステータス][並べ替え][設定][アカウント0"
-      ]
+      "title": "カテゴリ",
+      "subtitle": "もっと見つけなさい !",
+      "items": ["トップコミック", "ジェーレス", "漫画を探す", "その他"]
     },
     "hot": {
-      "title": "長続きするコミックのおすすめを読む！][カテゴリ][詳細はこちら！][トップコミック][ジャンル][コミックを検索][詳細][ホット][トップ週][履歴][もっと見る][ライブラリ][最近][購読][ダウンロード][発見][ジャンルを選択][ユーザー向け][最大チャプター数][ステータス][並べ替え][設定][アカウント1",
+      "title": "ホット",
       "subtitle": ""
     },
     "topWeek": {
-      "title": "長続きするコミックのおすすめを読む！][カテゴリ][詳細はこちら！][トップコミック][ジャンル][コミックを検索][詳細][ホット][トップ週][履歴][もっと見る][ライブラリ][最近][購読][ダウンロード][発見][ジャンルを選択][ユーザー向け][最大チャプター数][ステータス][並べ替え][設定][アカウント2",
+      "title": "上位週",
       "subtitle": ""
     },
     "history": {
-      "title": "長続きするコミックのおすすめを読む！][カテゴリ][詳細はこちら！][トップコミック][ジャンル][コミックを検索][詳細][ホット][トップ週][履歴][もっと見る][ライブラリ][最近][購読][ダウンロード][発見][ジャンルを選択][ユーザー向け][最大チャプター数][ステータス][並べ替え][設定][アカウント3",
+      "title": "歴史",
       "subtitle": ""
     },
-    "button": "長続きするコミックのおすすめを読む！][カテゴリ][詳細はこちら！][トップコミック][ジャンル][コミックを検索][詳細][ホット][トップ週][履歴][もっと見る][ライブラリ][最近][購読][ダウンロード][発見][ジャンルを選択][ユーザー向け][最大チャプター数][ステータス][並べ替え][設定][アカウント4"
+    "button": "詳細表示"
   },
   "library": {
-    "name": "長続きするコミックのおすすめを読む！][カテゴリ][詳細はこちら！][トップコミック][ジャンル][コミックを検索][詳細][ホット][トップ週][履歴][もっと見る][ライブラリ][最近][購読][ダウンロード][発見][ジャンルを選択][ユーザー向け][最大チャプター数][ステータス][並べ替え][設定][アカウント5",
+    "name": "図書館",
     "recent": {
-      "name": "長続きするコミックのおすすめを読む！][カテゴリ][詳細はこちら！][トップコミック][ジャンル][コミックを検索][詳細][ホット][トップ週][履歴][もっと見る][ライブラリ][最近][購読][ダウンロード][発見][ジャンルを選択][ユーザー向け][最大チャプター数][ステータス][並べ替え][設定][アカウント6"
+      "name": "近年"
     },
     "subscribes": {
-      "name": "長続きするコミックのおすすめを読む！][カテゴリ][詳細はこちら！][トップコミック][ジャンル][コミックを検索][詳細][ホット][トップ週][履歴][もっと見る][ライブラリ][最近][購読][ダウンロード][発見][ジャンルを選択][ユーザー向け][最大チャプター数][ステータス][並べ替え][設定][アカウント7"
+      "name": "サブスクライブ"
     },
     "downloads": {
-      "name": "長続きするコミックのおすすめを読む！][カテゴリ][詳細はこちら！][トップコミック][ジャンル][コミックを検索][詳細][ホット][トップ週][履歴][もっと見る][ライブラリ][最近][購読][ダウンロード][発見][ジャンルを選択][ユーザー向け][最大チャプター数][ステータス][並べ替え][設定][アカウント8"
+      "name": "ダウンロード"
     }
   },
   "discover": {
-    "name": "長続きするコミックのおすすめを読む！][カテゴリ][詳細はこちら！][トップコミック][ジャンル][コミックを検索][詳細][ホット][トップ週][履歴][もっと見る][ライブラリ][最近][購読][ダウンロード][発見][ジャンルを選択][ユーザー向け][最大チャプター数][ステータス][並べ替え][設定][アカウント9",
+    "name": "ディスカバー",
     "genres": {
-      "title": "ログイン][より多くの機能を使用するためにログイン0"
+      "title": "ジャンルの選択"
     },
     "user": {
-      "title": "ログイン][より多くの機能を使用するためにログイン1"
+      "title": "ユーザー用"
     },
     "maxCpts": {
-      "title": "ログイン][より多くの機能を使用するためにログイン2"
+      "title": "最大数章"
     },
     "status": {
-      "title": "ログイン][より多くの機能を使用するためにログイン3"
+      "title": "状況"
     },
     "sortBy": {
-      "title": "ログイン][より多くの機能を使用するためにログイン4"
+      "title": "ソート順"
     }
   },
   "setting": {
-    "name": "ログイン][より多くの機能を使用するためにログイン5",
+    "name": "設定",
     "account": {
-      "name": "ログイン][より多くの機能を使用するためにログイン6",
-      "title": "ログイン][より多くの機能を使用するためにログイン7",
-      "subtitle": "ログイン][より多くの機能を使用するためにログイン8"
+      "name": "アカウント",
+      "title": "ログイン",
+      "subtitle": "追加機能を使用するログイン"
+    },
+    "setting": {
+      "name": "設定",
+      "items": ["ダルクテーム", "言語"]
+    },
+    "pushNotification": {
+      "name": "プッシュ通知",
+      "items": ["新しい章"]
+    },
+    "about": {
+      "name": "について",
+      "items": [
+        "Web サイト",
+        "用語",
+        "我々について",
+        "プライバシー",
+        "問い合わせ"
+      ]
     }
+  },
+  "stackNavScreens": {
+    "comic-detail": "コミック詳細画面",
+    "chapter": "チャッタースクリーン",
+    "comic-list": "コミック・リスト画面",
+    "find-result": "結果画面の検索",
+    "find-by-name-result": "名前の結果による検索",
+    "genres": "性別: ",
+    "genres-badge-list": "ゲール・バッジ",
+    "genres-comic-list": "ジェーレス・コミック",
+    "login": "ログイン画面",
+    "notification": "届出",
+    "sign-up": "サインアップ画面",
+    "top-comic": "トップ・コミック・スクリーン",
+    "select-download-chapter": "章の選択",
+    "offline-comic-screen": "オフラインコミック画面",
+    "offline-chapter-screen": "オフラインコミック画面"
   }
 }
