--- a/packages/app/i18n/en1.json
+++ b/packages/app/i18n/en1.json
@@ -62,6 +62,35 @@
       "name": "account",
       "title": "Login",
       "subtitle": "Login to use more feature"
+    },
+    "setting": {
+      "name": "setting",
+      "items": ["DarkTheme", "Language"]
+    },
+    "pushNotification": {
+      "name": "Push Notification",
+      "items": ["New chapter"]
+    },
+    "about": {
+      "name": "about",
+      "items": ["Website", "Term", "About us", "Privacy", "Contact"]
     }
+  },
+  "stackNavScreens": {
+    "comic-detail": "Comic Detail Screen",
+    "chapter": "ChapterScreen",
+    "comic-list": "Comic List Screen",
+    "find-result": "Find Result Screen",
+    "find-by-name-result": "Find by name result",
+    "genres": "Genres: ",
+    "genres-badge-list": "Genres badge",
+    "genres-comic-list": "Genres comic list",
+    "login": "Login screen",
+    "notification": "Notifications",
+    "sign-up": "Sign Up Screen",
+    "top-comic": "Top Comic Screen",
+    "select-download-chapter": "Select chapters",
+    "offline-comic-screen": "Offline Comic Screen",
+    "offline-chapter-screen": "Offline Comic Screen"
   }
 }
